feat(bundle): added robust bundle loading and verification

--- a/.gitignore
+++ b/.gitignore
@@ -76,6 +76,8 @@ subprojects/libconstants/
 subprojects/liblogging/
 subprojects/eigen-*/
 subprojects/fourdst/
+subprojects/*/
+!subprojects/packagefiles/
 
 *.csv
 *.dot
