--- a/meson.build
+++ b/meson.build
@@ -1,5 +1,7 @@
 project('libplugin', 'cpp', meson_version : '>= 1.3.0', version : 'v0.2.0', default_options : ['cpp_std=c++23'])
 
+subdir('build-config')
+
 subdir('src')
 
 if get_option('tests')
@@ -10,13 +12,16 @@ else
 endif
 
 if get_option('pkg-config')
+    pkg_libs = [libplugin, yaml_cpp_dep, openssl_dep, minizip_dep]
+
+
     message('Setting up pkg-config file for libplugin...')
     pkg = import('pkgconfig')
     pkg.generate(
         name: 'libplugin',
         description: 'Plugin module for SERiF and related projects',
         version: meson.project_version(),
-        libraries: [libplugin],
+        libraries: pkg_libs,
         subdirs: ['fourdst'],
         filebase: 'fourdst_plugin',
         install_dir: join_paths(get_option('libdir'), 'pkgconfig')
