build(openssl): pinned openssl required version to >= 3.0.0

--- a/build-config/openssl/meson.build
+++ b/build-config/openssl/meson.build
@@ -1,6 +1,9 @@
- openssl_dep = dependency('openssl', required: false)
- if not openssl_dep.found()
-   openssl_proj = subproject('openssl')
-   openssl_dep = openssl_proj.get_variable('openssl_dep')
- endif
+openssl_dep = dependency('openssl', version: '>=3.0.0', required: false)
 
+if not openssl_dep.found()
+    message('System OpenSSL not found or version is < 3.0.0. Building subproject instead.')
+    openssl_proj = subproject('openssl')
+    openssl_dep = openssl_proj.get_variable('openssl_dep')
+else
+    message('Found suitable system OpenSSL: ' + openssl_dep.version())
+endif
