fix(minizip-ng): made library static
In order to compile into python minizip-ng must be made static

--- a/build-config/minizip-ng/meson.build
+++ b/build-config/minizip-ng/meson.build
@@ -1,2 +1,2 @@
 minizip_proj = subproject('minizip-ng')
-minizip_dep = minizip_proj.get_variable('minizip_ng_dep')
+minizip_dep = minizip_proj.get_variable('minizip_ng_dep').as_static()
