refactor(dependencies): Static libraries only built in python
Now libplugin will only use static libraries when building a python
wheel

--- a/build-config/minizip-ng/meson.build
+++ b/build-config/minizip-ng/meson.build
@@ -1,2 +1,7 @@
 minizip_proj = subproject('minizip-ng')
-minizip_dep = minizip_proj.get_variable('minizip_ng_dep').as_static()
+
+if py_installation
+    minizip_dep = minizip_proj.get_variable('minizip_ng_dep').as_static()
+else
+    minizip_dep = minizip_proj.get_variable('minizip_ng_dep')
+endif
